--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-dotenv = "0.15.0"
+config = { version = "0.15.11", features = ["toml"] }
 notify-rust = "4.11.7"
 qbittorrent_rust = "0.1.3"
 tokio = "1.45.1"
